force-app/main/default/objects/CCS_Batch_Instructor__c/CCS_Batch_Instructor__c.object-meta.xml
<CustomObject>
    <label>Batch Instructor</label>
    <nameField>
        <displayFormat>BI-{0000000000}</displayFormat>
        <label>Instructor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>