force-app/main/default/objects/CCS_Batch_Instructor__c/fields/Instructor_Id__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Id__c</fullName>
    <label>Instructor ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>