force-app/main/default/objects/CCS_Batch_Instructor__c/fields/Offering_Id_Batch_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Offering_Id_Batch_Instructor__c</fullName>
    <label>Offering Id Batch Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>